# prism-syntactic-reduction

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  all_sets.txt  azure-pipelines.yml  config.json  max_sets.txt  model12_probs_re_B.pmc.json
Examples/: bsp.prism  manually_fixed_reduced_rewrite_model1_probs_re.pmc  model1_probs_re.pmc  rewrite_model1_probs_re.pmc  small_random.7z
Examples/debug/: bsp.prism  modified_init_in_family.prism  readable_reduced_model.prism.txt
Examples/ireduce/: in.prism  in_family _local_var.prism  in_family.prism  iprep.py  ireduce.py  ireorder.py  merged_family.prism  out.prism  out_family.prism  properties.props  reg.prism  reg_family.prism
RESULTS/: all_partitionings.json  max_groupings.txt  meta.json  var_list.txt
RESULTS/0/: log.txt  partitioning.json  prism_data.json  reduced_model.prism
RESULTS/1/: log.txt  partitioning.json  prism_data.json  reduced_model.prism
RESULTS/10/: log.txt  partitioning.json  prism_data.json  reduced_model.prism
RESULTS/100/: log.txt  prism_data.json  reduced_model.prism
RESULTS/101/: log.txt  prism_data.json  reduced_model.prism
RESULTS/102/: log.txt  partitioning.json  prism_data.json  reduced_model.prism
RESULTS/103/: log.txt  partitioning.json  prism_data.json  reduced_model.prism
RESULTS/104/: log.txt  prism_data.json  reduced_model.prism
RESULTS/105/: log.txt  partitioning.json  prism_data.json  reduced_model.prism
RESULTS/106/: log.txt  partitioning.json  prism_data.json  reduced_model.prism
RESULTS/107/: log.txt  partitioning.json  prism_data.json  reduced_model.prism
RESULTS/108/: log.txt  partitioning.json  prism_data.json  reduced_model.prism
RESULTS/109/: log.txt  partitioning.json  prism_data.json  reduced_model.prism
RESULTS/11/: log.txt  partitioning.json  prism_data.json  reduced_model.prism
RESULTS/110/: log.txt  prism_data.json  reduced_model.prism
RESULTS/111/: log.txt  partitioning.json  prism_data.json  reduced_model.prism
RESULTS/112/: log.txt  partitioning.json  prism_data.json  reduced_model.prism
RESULTS/113/: log.txt  partitioning.json  prism_data.json  reduced_model.prism
RESULTS/114/: log.txt  partitioning.json  prism_data.json  reduced_model.prism
RESULTS/115/: log.txt  partitioning.json  prism_data.json  reduced_model.prism
RESULTS/116/: log.txt  prism_data.json  reduced_model.prism
RESULTS/117/: log.txt  partitioning.json  prism_data.json  reduced_model.prism
RESULTS/118/: log.txt  partitioning.json  prism_data.json  reduced_model.prism
RESULTS/119/: log.txt  prism_data.json  reduced_model.prism
RESULTS/12/: log.txt  partitioning.json  prism_data.json  reduced_model.prism
RESULTS/120/: log.txt  partitioning.json  prism_data.json  reduced_model.prism
RESULTS/121/: log.txt  partitioning.json  prism_data.json  reduced_model.prism
RESULTS/122/: log.txt  partitioning.json  prism_data.json  reduced_model.prism
RESULTS/123/: log.txt  partitioning.json  prism_data.json  reduced_model.prism
RESULTS/124/: log.txt  partitioning.json  prism_data.json  reduced_model.prism
RESULTS/125/: log.txt  partitioning.json  prism_data.json  reduced_model.prism
RESULTS/126/: log.txt  prism_data.json  reduced_model.prism
RESULTS/127/: log.txt  prism_data.json  reduced_model.prism
RESULTS/128/: log.txt  prism_data.json  reduced_model.prism
RESULTS/129/: log.txt  partitioning.json  prism_data.json  reduced_model.prism
RESULTS/13/: log.txt  partitioning.json  prism_data.json  reduced_model.prism
RESULTS/130/: log.txt  prism_data.json  reduced_model.prism
RESULTS/131/: log.txt  partitioning.json  prism_data.json  reduced_model.prism
RESULTS/132/: log.txt  prism_data.json  reduced_model.prism
RESULTS/133/: log.txt  prism_data.json  reduced_model.prism
RESULTS/134/: log.txt  prism_data.json  reduced_model.prism
RESULTS/135/: log.txt  partitioning.json  prism_data.json  reduced_model.prism
RESULTS/136/: log.txt  partitioning.json  prism_data.json  reduced_model.prism
RESULTS/137/: log.txt  prism_data.json
RESULTS/138/: log.txt  prism_data.json  reduced_model.prism
RESULTS/139/: log.txt  prism_data.json  reduced_model.prism
RESULTS/14/: log.txt  partitioning.json  prism_data.json  reduced_model.prism
RESULTS/140/: log.txt  partitioning.json  prism_data.json  reduced_model.prism
RESULTS/141/: log.txt  partitioning.json  prism_data.json  reduced_model.prism
RESULTS/142/: log.txt  partitioning.json  prism_data.json  reduced_model.prism
RESULTS/143/: log.txt  partitioning.json  prism_data.json  reduced_model.prism
RESULTS/144/: log.txt  prism_data.json  reduced_model.prism
RESULTS/145/: log.txt  partitioning.json  prism_data.json  reduced_model.prism
RESULTS/146/: log.txt  prism_data.json  reduced_model.prism
RESULTS/147/: log.txt  partitioning.json  prism_data.json  reduced_model.prism
RESULTS/148/: log.txt  partitioning.json  prism_data.json  reduced_model.prism
RESULTS/149/: log.txt  partitioning.json  prism_data.json  (+1 more)
artifacts/: .gitignore
res/: config.json
script/: in_family_reduced.prism  unix-test.sh  win-clean-create-project-build.bat  win-clean-create-project-build.ps1  win-test.ps1
slides/: slides.tex
src/: CMakeLists.txt  Par02.bib  bibliography.bib  bisim.bib  chaitin.bib  char_helper.cpp  char_helper.h  const_regexes.h  debug_001.h  esrel.bib  internal_error.h  live.bib  logger.cpp  logger.h  not_implemented.h  parse_error.h  parser.cpp  parser.h  register_allocation.bib  script.tex  symmetry.bib  syntactic_reducer.cpp
test/: CMakeLists.txt  example_test.cpp  test_compile_not_implemented_h.cpp
tools/: CMakeLists.txt  extractor.cpp
tools/collect-data-controller/: CMakeLists.txt  controller.cpp
tools/prism-log-extractor/: CMakeLists.txt  extractor.cpp
(+1600 files in other folders)
