#set(BINARY ${CMAKE_PROJECT_NAME})


file(GLOB_RECURSE SOURCES LIST_DIRECTORIES true *.h *.cpp)
#set(SOURCES ${SOURCES})

add_executable(${PROJECT_NAME} ${SOURCES})

add_library(${PROJECT_NAME}_lib STATIC ${SOURCES}) #for using in tests

message("Custom Message:   " ${Boost_LIBRARIES})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} LINK_PUBLIC ${Boost_LIBRARIES} )
#TARGET_LINK_LIBRARIES(${PROJECT_NAME}_lib LINK_PUBLIC ${Boost_LIBRARIES} )