set(TEST-PROJECT-NAME TEST-${CMAKE_PROJECT_NAME})

file(GLOB_RECURSE TEST_SOURCES LIST_DIRECTORIES false *.h *.cpp)

set(SOURCES ${TEST_SOURCES})

add_executable(${TEST-PROJECT-NAME} ${TEST_SOURCES})

add_test(NAME ${TEST-PROJECT-NAME} COMMAND ${TEST-PROJECT-NAME})

target_link_libraries(${TEST-PROJECT-NAME} PUBLIC ${CMAKE_PROJECT_NAME}_lib gtest)
